<resources>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="companyName">CW Construction</string>
    <string name="hours">Hours</string>
    <string name="hourTimes">Monday - Friday 7AM - 4PM</string>
    <string name="socialMedia">Social Media</string>
    <string name="pick_date">Pick A Date</string>
    <string name="companyBlurb">CW Construction is the best construction crew in the city. We employ 4 passionate workers that love meeting your construction needs</string>

    <string-array name="material_array">
        <item>Cheap</item>
        <item>Good</item>
        <item>Great</item>
        <item>Amazing</item>
    </string-array>
    <string-array name="problem_array">
        <item>Remodel</item>
        <item>Demolition</item>
        <item>Flooring</item>
        <item>Paint</item>
    </string-array>


    <string name="cody">Cody Pollard</string>
    <string name="wilson">Wilson Paz</string>
    <string name="role">Manager</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="titleAbout">About CW Construction</string>
    <string name="about1">Privately owned company that was founded in 2012 by owners Cody and Wilson</string>
    <string name="about2">The company offers many types of skilled trades such as roofing, demolition, remodeling and so on</string>
    <string name="about3">We\'ve completed hundreds of jobs in the Windsor, ON area and surrounding areas</string>
    <string name="quoteTitle">Request A Quote</string>
    <string name="material">Material Type</string>
    <string name="problem">Problem</string>
    <string name="Description">Description</string>
    <string name="Date">Date Available</string>
    <string name="switch_title">Settings switch</string>
    <string name="switch_summary">Enable or disable this option</string>

    <string name="app_name">"CW Construction   "</string>
    <string name="change_lang">You have chosen English as your default language</string>
    <string name="French">French</string>
    <string name="English">English</string>

    <string name="Other">Other</string>
    <string name="personName">Full Name</string>
    <string name="credits">Credits</string>
    <string name="imagesUsed" translatable="false">Images</string>
    <string name="fontUsed">Font</string>
    <string name="developers">Developers</string>
    <string name="ubuntu" translatable="false">Ubuntu</string>
    <string name="location">Location</string>
    <string name="address" translatable="false">11 Pollzap St</string>
    <string name="address2" translatable="false">Windsor, ON</string>
    <string name="adress3" translatable="false">N8X 4G3, Canada</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="luxury">Luxury</string>
    <string name="remodel">Remodel</string>
    <string name="additionalInformation">Additional Information</string>
    <string name="area">Area</string>


</resources>
